k8s/apps/database/emqx/cluster/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emqx-dashboard
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/appName: "Mqtt"
    hajimari.io/icon: mdi:iobroker
spec:
  ingressClassName: nginx
  rules:
    - host: &host emqx.k8sj.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emqx-dashboard
                port:
                  number: 18083
  tls:
    - hosts:
        - *host

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: emqx-dashboard
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Mqtt
    gethomepage.dev/group: Kubernetes
    gethomepage.dev/icon: sh-mqtt.png
    gethomepage.dev/name: Mqtt
    gethomepage.dev/app: mqtt
spec:
  parentRefs:
    - name: envoi-internal
      namespace: networking
  hostnames:
    - emqx.k8sj.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: emqx-dashboard
          port: 18083
